Fixed alignment and text visual

--- a/styles.css
+++ b/styles.css
@@ -207,6 +207,7 @@ input[type="date"], input[type="time"] {
     width: 28px;
     height: 22px;
     cursor: pointer;
+    margin-left: 10px;
 }
 
 
